[package]
name = "deployment-scripts"
version = "0.0.0"
authors = ["amanusk <amanusk@pm.me>"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Deployment scripts for my personal projects"


[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = { version = "1.0.96", features = ["preserve_order"] }
serde_with = "2.3.2"
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs" }
tokio = { version = "1.28.1", default-features = false, features = ["macros", "rt-multi-thread"] }
url = "2.3.1"
envfile = "0.2.1"
eyre = "0.6"
clap = { version = "4.0.26", features = ["derive", "env"] }
clap_complete = "4.0.5"
